n8n/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`n8n.famcr.org`)
      kind: Rule
      services:
        - name: n8n
          port: 80
  tls:
    secretName: n8n-certificate-secret
